# MidiRecorder

./: .gitignore  CMakeLists.txt  CMakeSettings.json  README.md  README.txt
src/: editor.c  editor.h  lilypond_export.c  lilypond_export.h  main.c  midi_input.c  midi_input.h  song.c  song.h
